...
                                            <color key="titleColor" systemColor="darkTextColor"/>
                                        </state>
                                        <connections>
                                            <action selector="tileSelected:" destination="fKh-RT-nzz" eventType="touchUpInside" id="brC-RP-JkF"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" clipsSubviews="YES" tag="15" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fzz-re-jq4">
                                        <rect key="frame" x="97" y="-16" width="219" height="200"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <color key="tintColor" systemColor="darkTextColor"/>
                                        <state key="normal">
                                            <color key="titleColor" systemColor="darkTextColor"/>
...
